# alloy

./: .cproject  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
assets/images/: .gitignore
assets/models/: .gitignore
ext/: .gitignore
include/core/: Alloy.h  AlloyAnimator.h  AlloyAny.h  AlloyAnyFunction.h  AlloyApplication.h  AlloyArray.h  AlloyCamera.h  AlloyColorSelector.h  AlloyCommon.h  AlloyContext.h  AlloyDataFlow.h  AlloyDenseMatrix.h  AlloyDenseSolve.h  AlloyDrawUtil.h  AlloyEnum.h  AlloyExpandBar.h  AlloyExpandTree.h  AlloyFileUtil.h  AlloyFilesystem.h  AlloyGraphPane.h  AlloyImage.h  AlloyImageFeatures.h  AlloyImageProcessing.h  AlloyIntersector.h  AlloyIsoContour.h  AlloyLocator.h  AlloyMath.h  AlloyMesh.h  AlloyMeshPrimitives.h  AlloyMeshTextureMap.h  AlloyNumber.h  AlloyOptimization.h  AlloyOptimizationMath.h  AlloyParameterPane.h  AlloyReconstruction.h  AlloySimulation.h  AlloySparseBitSet.h  AlloySparseMatrix.h  AlloySparseSolve.h  AlloySpline.h  (+29 more)
include/core/libkdtree/: node.h
include/core/nl/: nl.h  nl_blas.h  nl_context.h  nl_iterative_solvers.h  nl_matrix.h  nl_preconditioners.h  nl_private.h
include/core/ocl/: BufferCLGL.h  Image2dCL.h  Image2dCLGL.h  MemoryCL.h  ocl_runtime_error.h
include/core/poisson/: ArgumentParser.hpp  BSplineData.h  CmdLineParser.h  FunctionData.h  Geometry.h  MultiGridOctreeData.SortedTreeNodes.hpp  MultiGridOctreeData.System.hpp  MultiGridOctreeData.h  MyTime.h  Octree.h  PPolynomial.h  PointStream.h  PoissonRecon.cpp  Polynomial.h
include/example/: BodyPhysicsEx.h  ControlsEx.h  DataFlowEx.h  DistanceFieldEx.h  ExpandBarEx.h  ExpandTreeEx.h  ForceDirectedGraphEx.h  GraphPaneEx.h  ImageFeaturesEx.h  LaplaceFillEx.h  MeshOptimizationEx.h  MeshParticleEx.h  MeshPickerEx.h  MeshReconstructionEx.h  MeshTextureEx.h  MeshTextureMapEx.h  OneEuroFilterEx.h  ParameterPaneEx.h  SoftBodyEx.h  TabPaneEx.h  TablePaneEx.h  TimelineEx.h
include/ocl/: BufferCL.h  ComputeCL.h  FunctionCL.h  Image3dCL.h  ProgramCL.h
include/physics/: Body.h  BrokenConnection.h  Cell.h  CellVertex.h  FastLSM.h  LatticeLocation.h  LatticePointAndCost.h  LpAndCost.h  Particle.h  Region.h  SumData.h  Summation.h  stdafx.h
include/poisson/: ArgumentParser.h  Array.h  BSplineData.h  Geometry.h  MAT.h  MultiGridOctreeData.IsoSurface.hpp  MultiGridOctreeData.hpp  Octree.hpp  PointStream.h  PointStream.hpp  SparseMatrix.h  Trimmer.h
src/core/: AlloyAny.cpp  AlloyApplication.cpp  AlloyCamera.cpp  AlloyColorSelector.cpp  AlloyCommon.cpp  AlloyContext.cpp  AlloyDataFlow.cpp  AlloyDenseSolve.cpp  AlloyDistanceField.cpp  AlloyDrawUtil.cpp  AlloyExpandBar.cpp  AlloyExpandTree.cpp  AlloyFileUtil.cpp  AlloyGraphPane.cpp  AlloyImage.cpp  AlloyImageFeatures.cpp  AlloyImageProcessing.cpp  AlloyIntersector.cpp  AlloyIsoContour.cpp  AlloyMath.cpp  AlloyMesh.cpp  AlloyMeshPrimitives.cpp  AlloyMeshTextureMap.cpp  AlloyNumber.cpp  AlloyOptimization.cpp  AlloyParameterPane.cpp  AlloyReconstruction.cpp  AlloySimulation.cpp  AlloySparseBitSet.cpp  AlloySparseSolve.cpp  AlloyTabPane.cpp  AlloyTablePane.cpp  AlloyTimeline.cpp  AlloyUI.cpp  AlloyUndoRedo.cpp  AlloyUnits.cpp  AlloyVector.cpp  AlloyVolume.cpp  AlloyWidget.cpp  AlloyWorker.cpp  (+13 more)
src/core/nl/: nl_api.c  nl_blas.c  nl_context.c  nl_iterative_solvers.c  nl_matrix.c  nl_os.c  nl_preconditioners.c
src/core/ocl/: BufferCL.cpp  ComputeCL.cpp  (+6 more)
src/example/: AnyFunctionEx.cpp  BodyPhysicsEx.cpp  ColorSpaceEx.cpp  CompositeEx.cpp  ControlsEx.cpp  DataFlowEx.cpp  DialogsEx.cpp  DistanceFieldEx.cpp  EventsEx.cpp  ExpandBarEx.cpp  ExpandTreeEx.cpp  ForceDirectedGraphEx.cpp  GraphPaneEx.cpp  ImageEx.cpp  ImageFeaturesEx.cpp  ImageProcessingEx.cpp  IntersectorEx.cpp  LaplaceFillEx.cpp  LocatorEx.cpp  MenuEx.cpp  MeshDepthEx.cpp  MeshMatcapEx.cpp  MeshOptimizationEx.cpp  MeshParticleEx.cpp  MeshPhongEx.cpp  MeshPickerEx.cpp  MeshPrimitivesEx.cpp  MeshReconstructionEx.cpp  MeshSmoothEx.cpp  MeshSubdivideEx.cpp  MeshTextureEx.cpp  MeshTextureMapEx.cpp  MeshVertexColorEx.cpp  MeshWireframeEx.cpp  OneEuroFilterEx.cpp  ParameterPaneEx.cpp  PoissonBlendEx.cpp  PoissonInpaintEx.cpp  SoftBodyEx.cpp  TabPaneEx.cpp  (+4 more)
src/ocl/: BufferCLGL.cpp  FunctionCL.cpp  Image2dCL.cpp
src/physics/: Body.cpp  BodyHelperFuncs.cpp  Cell.cpp  CellVertex.cpp  Fracturing.cpp  Simulation.cpp  Summation.cpp  generation.cpp  latticelocation.cpp  stdafx.cpp
src/poisson/: Geometry.cpp  SSDRecon.cpp  SurfaceTrimmer.cpp
vs2015/: alloy.sln
vs2015/alloy/: alloy.vcxproj  alloy.vcxproj.filters
vs2015/example/: example.vcxproj  example.vcxproj.filters
(+6 files in other folders)
